Tests/DependencyInjection/Fixtures/annotations/inject/invalid/FooClassInvalidConstructorInjection2.php
<?php
/** @Service */
class FooClassInvalidConstructorInjection2
{
    /** @Inject("foo") */
    public function __construct($fooService, $barService)
    {
    }
}
